
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.

2008-Aug-15 UPDATE   Jerry Jacobs <jerkejacobs@gmail.com>
================================================================================
+About dialog 
modified: (common.cpp) GetAboutBuildVersion() is a custom build version for the about dialog
          (config.h.cmake) 
          (CreateSVNVersionHeader.cmake) KICAD_ABOUT_VERSION macro added

added:  (about_dialog.cpp) InitKiCadAbout() initalise the about dialog

removed: (common/infospgm.cpp) is no longer needed


2008-Aug-11 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema:
    libedit:
        solved : a bug which can crash eeschema on a double click.
        modified : pin lenght edit in pin edit dialog. The value (handle by spin control) was not editable with recent wxWidgets versions

2008-Aug-09 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    bug solved: pads holes not printed.
    enforced controls against malformed libraries

2008-Aug-06 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    Removed an obsolete option in the plot menu, in gerber format.
    Cleanup code.
    Solved a minor bug: rastnest was not displayed after a move module
    and if the command was aborted

2008-Juil-31 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema:
    Added component sheet X,Y location in BOM.
    Netlist generation: now spaces in names are replaced by '_' for pcbnew (which does not accept spaces)
    Bug: print all pages did not work.