@@ -1,0 +1,33 @@
+/* XPM */
+const char *shape_3d_xpm[] = {
+/* columns rows colors chars-per-pixel */
+"16 16 11 1",
+"  c none",
+"$ c #ACAEAC",
+"% c #3C3E3C",
+"+ c #535553",
+"X c #B40204",
+"@ c #2C2A2C",
+"# c #CCCECC",
+"& c #044A04",
+". c #6B6A6B",
+"o c #6C6E6C",
+"O c #353335",
+/* pixels */
+"   .X           ",
+"  ..o..o.. X    ",
+" O..oo......o.  ",
+" O..........o...",
+" .o.O.......o...",
+" o..O...oo.o.oo.",
+" ...Oo..oo.o.oo.",
+" .+++...oo.o.oo.",
+" ....o......o...",
+" .......oo......",
+" @@@@o........o.",
+"   ### ###@+##@@",
+"  $$$  $$$ $$$  ",
+"  ++$ O$$ %$$   ",
+"  &XX &X  %X    ",
+"                "
+};
