@@ -5,11 +5,17 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2008-Aug-18 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
+================================================================================
++pcbnew:
+    bug solved: Horizontal Oblong pads holes have a bad T Code size.
+
+
 2008-Aug-15 UPDATE   Jerry Jacobs <jerkejacobs@gmail.com>
 ================================================================================
-+About dialog 
++About dialog
 modified: (common.cpp) GetAboutBuildVersion() is a custom build version for the about dialog
-          (config.h.cmake) 
+          (config.h.cmake)
           (CreateSVNVersionHeader.cmake) KICAD_ABOUT_VERSION macro added
 
 added:  (about_dialog.cpp) InitKiCadAbout() initalise the about dialog
